Avoid horizontal scrollbar in Audience section

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ img {
 }
 
 section {
-  width: 600px;
+  width: 620px;
   padding-top: 130px;
   float: right;
   padding-bottom: 50px;
